添加商品管理项目

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,16 +44,24 @@
     <Compile Include="BaseService\BaseService.cs" />
     <Compile Include="BaseService\IBaseService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="IService\ISaltGoodsService.cs" />
+    <Compile Include="IService\ISaltOrderGoodsService.cs" />
     <Compile Include="IService\IOrderGoodsService.cs" />
+    <Compile Include="IService\ISaltOrderService.cs" />
     <Compile Include="IService\IOrderService.cs" />
     <Compile Include="IService\IGoodsService.cs" />
+    <Compile Include="IService\ISaltTerminalService.cs" />
     <Compile Include="IService\ITerminalWXUserService.cs" />
     <Compile Include="IService\ITerminalService.cs" />
     <Compile Include="IService\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\SaltGoodsService.cs" />
+    <Compile Include="Service\SaltOrderGoodsService.cs" />
     <Compile Include="Service\OrderGoodsService.cs" />
+    <Compile Include="Service\SaltOrderService.cs" />
     <Compile Include="Service\OrderService.cs" />
     <Compile Include="Service\GoodsService.cs" />
+    <Compile Include="Service\SaltTerminalService.cs" />
     <Compile Include="Service\TerminalWXUserService.cs" />
     <Compile Include="Service\TerminalService.cs" />
     <Compile Include="Service\UserService.cs" />
