--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -59,9 +59,13 @@
     <Compile Include="BaseRepository\BaseRepository.cs" />
     <Compile Include="BaseRepository\IBaseRepository.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="IRepository\ISaltGoodsRepository.cs" />
+    <Compile Include="IRepository\ISaltOrderGoodsRepository.cs" />
     <Compile Include="IRepository\IOrderGoodsRepository.cs" />
+    <Compile Include="IRepository\ISaltOrderRepository.cs" />
     <Compile Include="IRepository\IOrderRepository.cs" />
     <Compile Include="IRepository\IGoodsRepository.cs" />
+    <Compile Include="IRepository\ISaltTerminalRepository.cs" />
     <Compile Include="IRepository\ITerminalWXUserRepository.cs" />
     <Compile Include="IRepository\ITerminalRepository.cs" />
     <Compile Include="IRepository\IUserRepository.cs" />
@@ -71,16 +75,24 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Model\DUser.cs" />
+    <Compile Include="Model\SlatGoods.cs" />
     <Compile Include="Model\Goods.cs" />
     <Compile Include="Model\Model.cs" />
+    <Compile Include="Model\SaltOrder.cs" />
     <Compile Include="Model\Order.cs" />
+    <Compile Include="Model\SaltOrderGoods.cs" />
     <Compile Include="Model\OrderGoods.cs" />
+    <Compile Include="Model\SaltTerminal.cs" />
     <Compile Include="Model\TerminalWXUser.cs" />
     <Compile Include="Model\Terminal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\SaltGoodsRepository.cs" />
+    <Compile Include="Repository\SaltOrderGoodsRepository.cs" />
     <Compile Include="Repository\OrderGoodsRepository.cs" />
+    <Compile Include="Repository\SaltOrderRepository.cs" />
     <Compile Include="Repository\OrderRepository.cs" />
     <Compile Include="Repository\GoodsRepository.cs" />
+    <Compile Include="Repository\SaltTerminalRepository.cs" />
     <Compile Include="Repository\TerminalWXUserRepository.cs" />
     <Compile Include="Repository\TerminalRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
