--- a/Dispatching/Web.config
+++ b/Dispatching/Web.config
@@ -2,6 +2,8 @@
 <configuration>
   <configSections>
     <section name="FineUIMvc" type="FineUIMvc.ConfigSection, FineUIMvc" requirePermission="false" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <!-- 可用的配置项（这里列的都是默认值）: 
       Theme="Default" 
@@ -33,7 +35,6 @@
       LoadingImageNumber="1"
   -->
   <FineUIMvc DebugMode="true" CustomTheme="pure_green" EnableAnimation="false" />
-
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -41,14 +42,12 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-
     <httpModules>
       <add name="FineUIMvcScriptModule" type="FineUIMvc.ScriptModule, FineUIMvc" />
     </httpModules>
     <httpHandlers>
       <add verb="GET" path="res.axd" type="FineUIMvc.ResourceHandler, FineUIMvc" />
     </httpHandlers>
-
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off" />
@@ -82,13 +81,24 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="Model" connectionString="data source=qds126671118.my3w.com;User ID=qds126671118;Password=Nostop911031;initial catalog=qds126671118_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model" connectionString="data source=qds168139150.my3w.com;User ID=qds168139150;Password=Nostop911031@;initial catalog=qds168139150_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
-<system.webServer>
+  <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-  </system.webServer></configuration>
+  </system.webServer>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
+</configuration>
