--- a/DAL/App.config
+++ b/DAL/App.config
@@ -15,6 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model" connectionString="data source=qds126671118.my3w.com;User ID=qds126671118;Password=Nostop911031;initial catalog=qds126671118_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <!--<add name="Model" connectionString="data source=qds168139150.my3w.com;User ID=qds168139150;Password=Nostop911031@;initial catalog=qds168139150_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+    <add name="DebugModel" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=qds168139150_db;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
