--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -44,6 +44,8 @@
     <Compile Include="BaseService\BaseService.cs" />
     <Compile Include="BaseService\IBaseService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="IService\IOrderWapperService.cs" />
+    <Compile Include="IService\IWapperService.cs" />
     <Compile Include="IService\ISaltGoodsService.cs" />
     <Compile Include="IService\ISaltOrderGoodsService.cs" />
     <Compile Include="IService\IOrderGoodsService.cs" />
@@ -55,6 +57,8 @@
     <Compile Include="IService\ITerminalService.cs" />
     <Compile Include="IService\IUserService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\OrderWapperService.cs" />
+    <Compile Include="Service\WapperService.cs" />
     <Compile Include="Service\SaltGoodsService.cs" />
     <Compile Include="Service\SaltOrderGoodsService.cs" />
     <Compile Include="Service\OrderGoodsService.cs" />
