--- a/Dispatching/Web.config
+++ b/Dispatching/Web.config
@@ -81,8 +81,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="Model" connectionString="data source=qds168139150.my3w.com;User ID=qds168139150;Password=Nostop911031@;initial catalog=qds168139150_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="DebugModel" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=qds168139150_db;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="Model" connectionString="data source=qds168139150.my3w.com;User ID=qds168139150;Password=Nostop911031@;initial catalog=qds168139150_db;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="DebugModel" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=qds168139150_db;Integrated Security=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <system.webServer>
     <handlers>
